--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </div>
         </main>
         <footer>
+            <a href="https://github.com/wagallardo38/encriptadorWG"><img src="imagen/GitHub-Emblem.png" class="gato" alt="GitHub"/></a>
             <p class="copyright">&copy Copyright William Gallardo - 2024</p>
         </footer>
         <script src="app.js" defer></script>
